# cryptotools

frequencies/: frequencies.cabal
frequencies/src/: FrequencyTests.hs  Main.hs
