name:                frequencies
version:             0.1.0.0
synopsis:            Set of tools from cryptographic analysis
description:         Please see README.md
homepage:            http://github.com/devonhollowood/cryptotools
license:             BSD3
license-file:        LICENSE
author:              Devon Hollowood
maintainer:          devonhollowood@gmail.com
copyright:           2016 Devon Hollowood
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable frequencies
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , multiset
                     , text
                     , foldl
